<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/swipe_refresh_layout"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<androidx.core.widget.NestedScrollView
		android:id="@+id/scroll_view"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:background="@color/blue">

		<androidx.constraintlayout.widget.ConstraintLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content">

			<ProgressBar
				android:id="@+id/progress_bar"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_centerInParent="true"
				android:layout_marginTop="180dp"
				android:visibility="gone"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toTopOf="parent" />

			<androidx.constraintlayout.widget.ConstraintLayout
				android:id="@+id/parent_c_l"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				app:layout_constraintBottom_toBottomOf="parent"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toTopOf="parent">

				<TextView
					android:id="@+id/internet_connection"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:background="@color/red"
					android:gravity="center"
					android:text="@string/no_internet_connection"
					android:textColor="@color/white"
					android:visibility="gone"
					app:layout_constraintEnd_toEndOf="parent"
					app:layout_constraintStart_toStartOf="parent"
					app:layout_constraintTop_toTopOf="parent" />

				<androidx.constraintlayout.widget.ConstraintLayout
					android:id="@+id/constraint_layout"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:padding="10dp"
					app:layout_constraintEnd_toEndOf="parent"
					app:layout_constraintStart_toStartOf="parent"
					app:layout_constraintTop_toBottomOf="@id/internet_connection">

					<TextView
						android:id="@+id/temperature"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_marginTop="-10dp"
						android:fontFamily="sans-serif-light"
						android:textColor="@color/white"
						android:textSize="72sp"
						app:layout_constraintStart_toStartOf="parent"
						app:layout_constraintTop_toTopOf="parent"
						tools:text="1°" />

					<ImageView
						android:id="@+id/current_weather_pic"
						android:layout_width="100dp"
						android:layout_height="100dp"
						android:layout_marginEnd="10dp"
						android:baselineAlignBottom="true"
						android:scaleType="centerCrop"
						app:layout_constraintEnd_toEndOf="parent"
						app:layout_constraintTop_toTopOf="parent"
						tools:ignore="ContentDescription"
						tools:src="@tools:sample/avatars" />

					<ImageView
						android:id="@+id/place"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:baselineAlignBottom="true"
						android:src="@drawable/ic_place"
						app:layout_constraintStart_toStartOf="@id/temperature"
						app:layout_constraintTop_toBottomOf="@id/current_weather_pic"
						tools:ignore="ContentDescription" />

					<TextView
						android:id="@+id/city"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_marginStart="4dp"
						android:layout_marginTop="10dp"
						android:ellipsize="end"
						android:fontFamily="sans-serif-light"
						android:maxWidth="300dp"
						android:maxLines="1"
						android:textColor="@color/white"
						android:textSize="32sp"
						app:layout_constraintBaseline_toBaselineOf="@id/place"
						app:layout_constraintStart_toEndOf="@id/place"
						app:layout_constraintTop_toBottomOf="@id/current_weather_pic"
						tools:text="@tools:sample/cities" />

					<ImageView
						android:id="@+id/search"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_marginTop="12dp"
						android:baselineAlignBottom="true"
						android:src="@drawable/ic_search"
						app:layout_constraintStart_toStartOf="@id/place"
						app:layout_constraintTop_toBottomOf="@id/place"
						tools:ignore="ContentDescription" />

					<EditText
						android:id="@+id/input_city"
						android:layout_width="0dp"
						android:layout_height="wrap_content"
						android:background="@android:color/transparent"
						android:fontFamily="sans-serif-light"
						android:hint="@string/enter_the_name_of_the_city"
						android:importantForAutofill="no"
						android:inputType="text"
						android:textColor="@color/white"
						android:textColorHint="@color/white"
						android:textSize="16sp"
						app:layout_constraintEnd_toEndOf="parent"
						app:layout_constraintStart_toEndOf="@id/search"
						app:layout_constraintTop_toTopOf="@id/search" />

					<TextView
						android:id="@+id/max_min_temperature"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_marginTop="16dp"
						android:fontFamily="sans-serif-light"
						android:textColor="@color/white"
						android:textSize="16sp"
						app:layout_constraintStart_toStartOf="@id/search"
						app:layout_constraintTop_toBottomOf="@id/search"
						tools:text="5°/2°" />

					<TextView
						android:id="@+id/feels_like"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_marginStart="8dp"
						android:fontFamily="sans-serif-light"
						android:text="@string/feels_like"
						android:textColor="@color/white"
						android:textSize="16sp"
						app:layout_constraintStart_toEndOf="@+id/max_min_temperature"
						app:layout_constraintTop_toTopOf="@id/max_min_temperature" />

					<TextView
						android:id="@+id/feels_temperature"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_marginStart="4dp"
						android:fontFamily="sans-serif-light"
						android:textColor="@color/white"
						android:textSize="16sp"
						app:layout_constraintBaseline_toBaselineOf="@id/feels_like"
						app:layout_constraintStart_toEndOf="@id/feels_like"
						tools:text="5°" />

					<TextClock
						android:layout_marginTop="4dp"
						android:id="@+id/clock"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:fontFamily="sans-serif-light"
						android:textColor="@color/white"
						app:layout_constraintStart_toStartOf="@id/max_min_temperature"
						app:layout_constraintTop_toBottomOf="@id/feels_like"
						android:format12Hour="hh:mm a zz"
						android:format24Hour="HH:mm zz"/>

					<androidx.recyclerview.widget.RecyclerView
						android:id="@+id/hourly_forecast"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layout_marginTop="36dp"
						android:background="@drawable/custom_rectangle"
						android:orientation="horizontal"
						android:overScrollMode="ifContentScrolls"
						android:padding="12dp"
						app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
						app:layout_constraintEnd_toEndOf="parent"
						app:layout_constraintHorizontal_bias="0.0"
						app:layout_constraintStart_toStartOf="parent"
						app:layout_constraintTop_toBottomOf="@id/clock"
						tools:listitem="@layout/hour_rv_item" />

					<androidx.recyclerview.widget.RecyclerView
						android:id="@+id/daily_forecast"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layout_marginTop="36dp"
						android:background="@drawable/custom_rectangle"
						android:orientation="vertical"
						android:overScrollMode="ifContentScrolls"
						android:padding="12dp"
						app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
						app:layout_constraintEnd_toEndOf="parent"
						app:layout_constraintStart_toStartOf="parent"
						app:layout_constraintTop_toBottomOf="@id/hourly_forecast"
						tools:listitem="@layout/day_rv_item" />


					<LinearLayout
						android:id="@+id/uv_wind_humidity"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layout_marginTop="36dp"
						android:background="@drawable/custom_rectangle"
						android:orientation="horizontal"
						android:padding="10dp"
						app:layout_constraintEnd_toEndOf="parent"
						app:layout_constraintStart_toStartOf="parent"
						app:layout_constraintTop_toBottomOf="@id/daily_forecast">

						<LinearLayout
							android:layout_width="0dp"
							android:layout_height="wrap_content"
							android:layout_weight="1"
							android:orientation="vertical">

							<ImageView
								android:layout_width="64dp"
								android:layout_height="64dp"
								android:layout_gravity="center"
								android:layout_marginTop="10dp"
								android:src="@drawable/uv"
								tools:ignore="ContentDescription" />

							<TextView
								android:layout_width="match_parent"
								android:layout_height="wrap_content"
								android:layout_marginTop="10dp"
								android:fontFamily="sans-serif-light"
								android:gravity="center"
								android:text="@string/uv_index"
								android:textSize="18sp"
								android:textStyle="bold"
								app:layout_constraintStart_toStartOf="parent"
								app:layout_constraintTop_toTopOf="parent" />

							<TextView
								android:id="@+id/uv_index"
								android:layout_width="match_parent"
								android:layout_height="wrap_content"
								android:layout_marginTop="10dp"
								android:fontFamily="sans-serif-light"
								android:gravity="center"
								android:textSize="18sp"
								app:layout_constraintStart_toStartOf="parent"
								app:layout_constraintTop_toTopOf="parent"
								tools:text="5" />

						</LinearLayout>

						<View
							android:layout_width="1dp"
							android:layout_height="match_parent"
							android:background="@color/dark_grey" />

						<LinearLayout
							android:layout_width="0dp"
							android:layout_height="wrap_content"
							android:layout_weight="1"
							android:orientation="vertical">

							<ImageView
								android:layout_width="64dp"
								android:layout_height="64dp"
								android:layout_gravity="center"
								android:layout_marginTop="10dp"
								android:src="@drawable/wind"
								tools:ignore="ContentDescription" />

							<TextView
								android:layout_width="match_parent"
								android:layout_height="wrap_content"
								android:layout_marginTop="10dp"
								android:fontFamily="sans-serif-light"
								android:gravity="center"
								android:text="@string/wind"
								android:textSize="18sp"
								android:textStyle="bold"
								app:layout_constraintStart_toStartOf="parent"
								app:layout_constraintTop_toTopOf="parent" />

							<TextView
								android:id="@+id/wind_speed"
								android:layout_width="match_parent"
								android:layout_height="wrap_content"
								android:layout_marginTop="10dp"
								android:fontFamily="sans-serif-light"
								android:gravity="center"
								android:text="@string/km_h"
								android:textSize="18sp"
								app:layout_constraintStart_toStartOf="parent"
								app:layout_constraintTop_toTopOf="parent" />

						</LinearLayout>

						<View
							android:layout_width="1dp"
							android:layout_height="match_parent"
							android:background="@color/dark_grey" />

						<LinearLayout
							android:layout_width="0dp"
							android:layout_height="wrap_content"
							android:layout_weight="1"
							android:orientation="vertical">

							<ImageView
								android:layout_width="64dp"
								android:layout_height="64dp"
								android:layout_gravity="center"
								android:layout_marginTop="10dp"
								android:src="@drawable/humidity"
								tools:ignore="ContentDescription" />

							<TextView
								android:layout_width="match_parent"
								android:layout_height="wrap_content"
								android:layout_marginTop="10dp"
								android:fontFamily="sans-serif-light"
								android:gravity="center"
								android:text="@string/humidity"
								android:textSize="18sp"
								android:textStyle="bold"
								app:layout_constraintStart_toStartOf="parent"
								app:layout_constraintTop_toTopOf="parent" />

							<TextView
								android:id="@+id/humidity"
								android:layout_width="match_parent"
								android:layout_height="wrap_content"
								android:layout_marginTop="10dp"
								android:fontFamily="sans-serif-light"
								android:gravity="center"
								android:textSize="18sp"
								app:layout_constraintStart_toStartOf="parent"
								app:layout_constraintTop_toTopOf="parent"
								tools:text="80%" />

						</LinearLayout>

					</LinearLayout>

					<LinearLayout
						android:id="@+id/suntime"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layout_marginTop="36dp"
						android:background="@drawable/custom_rectangle"
						android:orientation="horizontal"
						android:padding="10dp"
						app:layout_constraintBottom_toBottomOf="parent"
						app:layout_constraintEnd_toEndOf="parent"
						app:layout_constraintStart_toStartOf="parent"
						app:layout_constraintTop_toBottomOf="@id/uv_wind_humidity">

						<LinearLayout
							android:layout_width="0dp"
							android:layout_height="wrap_content"
							android:layout_weight="1"
							android:orientation="vertical">

							<TextView
								android:layout_width="match_parent"
								android:layout_height="wrap_content"
								android:layout_marginTop="8dp"
								android:fontFamily="sans-serif-light"
								android:gravity="center"
								android:text="@string/sunrise"
								android:textSize="18sp"
								app:layout_constraintStart_toStartOf="parent"
								app:layout_constraintTop_toTopOf="parent" />

							<TextView
								android:id="@+id/sunrise_time"
								android:layout_width="match_parent"
								android:layout_height="wrap_content"
								android:layout_marginTop="4dp"
								android:fontFamily="sans-serif-light"
								android:gravity="center"
								android:textSize="18sp"
								android:textStyle="bold"
								app:layout_constraintStart_toStartOf="parent"
								app:layout_constraintTop_toTopOf="parent"
								tools:text="00:00" />

							<ImageView
								android:id="@+id/sunrise_iv"
								android:layout_width="80dp"
								android:layout_height="80dp"
								android:layout_gravity="center"
								android:layout_marginTop="10dp"
								android:layout_marginBottom="8dp"
								android:src="@drawable/sunrise"
								tools:ignore="ContentDescription" />

						</LinearLayout>

						<LinearLayout
							android:layout_width="0dp"
							android:layout_height="wrap_content"
							android:layout_weight="1"
							android:orientation="vertical">

							<TextView
								android:layout_width="match_parent"
								android:layout_height="wrap_content"
								android:layout_marginTop="10dp"
								android:fontFamily="sans-serif-light"
								android:gravity="center"
								android:text="@string/sunset"
								android:textSize="18sp"
								app:layout_constraintStart_toStartOf="parent"
								app:layout_constraintTop_toTopOf="parent" />

							<TextView
								android:id="@+id/sunset_time"
								android:layout_width="match_parent"
								android:layout_height="wrap_content"
								android:layout_marginTop="4dp"
								android:fontFamily="sans-serif-light"
								android:gravity="center"
								android:textSize="18sp"
								android:textStyle="bold"
								app:layout_constraintStart_toStartOf="parent"
								app:layout_constraintTop_toTopOf="parent"
								tools:text="00:00" />

							<ImageView
								android:id="@+id/sunset_iv"
								android:layout_width="80dp"
								android:layout_height="80dp"
								android:layout_gravity="center"
								android:layout_marginTop="10dp"
								android:layout_marginBottom="8dp"
								android:src="@drawable/sunset"
								tools:ignore="ContentDescription" />

						</LinearLayout>

					</LinearLayout>

				</androidx.constraintlayout.widget.ConstraintLayout>

			</androidx.constraintlayout.widget.ConstraintLayout>

		</androidx.constraintlayout.widget.ConstraintLayout>

	</androidx.core.widget.NestedScrollView>

</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
